# barabaDB

./: .dockerignore  .gitignore  BARADB_BUGS_REPORT.md  BARADB_CLIENT_BUGS.md  BARADB_DEFICIENCIES.md  BUGS.md  BUG_AUDIT.md  CHANGELOG.md  Dockerfile  Dockerfile.source  HUNOS_ISSUE.md  LICENSE  PLAN.md  PLAN_DONE.md  PLAN_ID_GENERATORS.md  PLAN_SQL_ADVANCED.md  PLAN_STABILIZATION.md  PLAN_old_1.md  PLAN_old_2.md  PR_DESCRIPTION.md  README.md  ROADMAP.md  baradadb.nimble  docker-compose.ormin.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  nim.cfg  reddit_post_draft.md
.github/workflows/: ci.yml  clients-ci.yml  debug.yml
adaptors/nim/: baradb_sqlite  baradb_sqlite.nim  test_baradb_adapter.nim
benchmarks/: FAIR_COMPARISON.md  README.md  REAL_COMPARISON.md  bench_all.nim  compare.nim  fair_bench.py  generate_report.py  pg_bench.py  search_bench.nim
clients/go/: client.go
clients/javascript/: .gitignore  README.md  baradb.d.ts  baradb.js  baradb_langchain.js  package.json
clients/nim/: .gitignore  README.md  baradb.nimble
clients/nim-allographer/: .env  .gitignore  PLAN_BARADB.md  PLAN_MIGRATION.md  README.md  allographer.nimble  compose.test.yaml  compose.yaml  makefile
clients/python/: .gitignore  README.md  baradb.py  pyproject.toml
clients/python/baradb/: __init__.py  chat_history.py  core.py  langchain_README.md  langchain_store.py
clients/python/examples/: basic.py
clients/python/tests/: test_integration.py  test_query_builder.py  test_wire_protocol.py
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: basic.rs  ping_test.rs
clients/rust/src/: lib.rs
clients/rust/tests/: integration_tests.rs
docs/: ARCHITECTURE.md  index.md
docs/ar/: api-binary.md  api-http.md  api-websocket.md  architecture.md  backup.md  baraql.md  btree.md  changelog.md  clients.md  columnar.md  configuration.md  crossmodal.md  deployment.md  distributed.md  docker.md  fts.md  graph.md  index.md  installation.md  lsm.md  mcp.md  monitoring.md  performance.md  protocol.md  quickstart.md  schema.md  security.md  storage.md  transactions.md  troubleshooting.md  udf.md  vector.md
docs/bg/: api-binary.md  api-http.md  api-websocket.md  architecture.md  backup.md  baraql.md  btree.md  changelog.md  clients.md  columnar.md  configuration.md  crossmodal.md  deployment.md  distributed.md  docker.md  fts.md  graph.md  index.md  installation.md  lsm.md  mcp.md  migration.md  monitoring.md  performance.md  protocol.md  quickstart.md  schema.md  search.md  security.md  storage.md  transactions.md  troubleshooting.md  udf.md  vector.md
docs/de/: api-binary.md  api-http.md  api-websocket.md  architecture.md  backup.md  baraql.md  btree.md  changelog.md  clients.md  columnar.md  configuration.md  crossmodal.md  docker.md  (+19 more)
examples/: rag_pipeline.py  tutorial.nim
formal-verification/: .gitignore  ANALYSIS.md  CHANGELOG.md  IMPROVEMENT_PLAN.md  README.md  UNIFIED_PLAN.md  backup.tla  crossmodal.tla  deadlock.tla  gossip.tla  mvcc.tla  raft.tla  recovery.tla  replication.tla  run_all.sh  sharding.tla  twopc.tla
nimbling/: package.json
scripts/: docker-build.sh  docker-run.sh  test-clients.sh
src/: barabadb.nim  baradadb.nim  baramcp.nim
tests/: bugfix_test.nim  config.nims  fuzz_test  fuzz_test.nim  join_tests.nim  nimforum_smoke_test  nimforum_smoke_test.nim  prop_test  prop_test.nim  stress_test.nim  test_all.nim  test_lock  test_lock.nim  test_minimal.nim  test_schema_persist.nim  test_storage_hardening.nim  test_wire_insert_stress.nim  tla_faithfulness  tla_faithfulness.nim
(+738 files in other folders)
