[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baradb"
version = "1.0.0"
description = "Official Python client for BaraDB — Multimodal Database Engine"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "BaraDB Team", email = "team@baradb.dev" },
]
keywords = ["database", "baradb", "multimodal", "client", "wire-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/barabadb/baradadb"
Documentation = "https://docs.baradb.dev"
Repository = "https://github.com/barabadb/baradadb.git"
Issues = "https://github.com/barabadb/baradadb/issues"

[tool.hatch.build.targets.wheel]
packages = ["baradb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
