[package]
name = "baradb"
version = "1.1.0"
edition = "2021"
authors = ["BaraDB Team <team@baradb.dev>"]
description = "Official async Rust client for BaraDB — binary protocol client"
license = "Apache-2.0"
repository = "https://github.com/katehonz/barabaDB"
documentation = "https://docs.baradb.dev"
readme = "README.md"
keywords = ["database", "baradb", "multimodal", "client", "wire-protocol"]
categories = ["database", "network-programming"]
rust-version = "1.70"

[dependencies]
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]

[[example]]
name = "basic"
path = "examples/basic.rs"